fix margin introText-element & hopefully image loading on mobile

--- a/index.css
+++ b/index.css
@@ -489,7 +489,7 @@ body h1 {
   .introText-element > div {
     display: flex;
     flex-direction: column;
-    margin: 1rem;
+    margin: 1rem 0rem;
     margin-top: 0;
     padding: 0;
   }
